# infinite-monkey

./: Cargo.toml  authenticator-keys  biggerletter.js  br-sem-acentos.txt
src/: monkeys.rs  researcher.rs
